# AI-In-Quantum-Technologies

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  master_manuscript.docx  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
datasets/: README.md  __init__.py
docs/: api.md  build_manuscript.py  contributing.md  datasets.md  getting-started.md  index.md  tutorials.md
docs/chapters/: capstones.md  ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  ch15.md  ch16.md  ch17.md  ch18.md  ch19.md  ch20.md  ch21.md  ch22.md  ch23.md  ch24.md  index.md
src/aiquantum/: __init__.py  linalg.py
src/aiquantum/api/: __init__.py  app.py  schemas.py
src/aiquantum/crypto/: __init__.py  qkd.py
src/aiquantum/materials/: __init__.py  crystal.py  superconductor.py
src/aiquantum/metrology/: __init__.py  sensing.py
src/aiquantum/qchem/: __init__.py  excited_states.py  ground_state.py
src/aiquantum/qml/: __init__.py  kernel.py  train.py
src/aiquantum/quantum/: __init__.py  circuit_optimize.py  error_correction.py  optimal_control.py  process_tomography.py  state_tomography.py
src/aiquantum/simulate/: __init__.py
tests/: conftest.py  test_api.py  test_datasets.py  test_domains.py  test_linalg.py  test_quantum.py
tutorials/: README.md
tutorials/01_bell_states_to_transformers/: README.md  walkthrough.py
tutorials/02_designing_a_superconducting_qubit/: README.md  walkthrough.py
tutorials/03_qec_decoder_challenge/: README.md  walkthrough.py
tutorials/04_certified_quantum_randomness/: README.md  walkthrough.py
tutorials/05_ethical_audit/: README.md  walkthrough.py
